--- a/face.css
+++ b/face.css
@@ -1,6 +1,7 @@
 body{
-   width: "80%";
-   height: "20%";
+align-items: center;
+
+
     
 }
 .content{
@@ -10,8 +11,8 @@ body{
 
 
 .header{
-    background-color:darkblue;
-        
+    background-color:blue;
+    margin-bottom: 100px;   
     
 }
 
@@ -80,7 +81,10 @@ padding-bottom: 10px;
 
 
 
-
+.all{
+   padding: 100px;
+    padding-left: 200px;
+}
 
 
 
